Fixed bug #37812 aggregate_methods_by_list fails to take certain methods Add test